libx11 (2:1.2.1-2) UNRELEASED; urgency=low

  * Move dbg packages to new debug section.

 -- Julien Cristau <jcristau@debian.org>  Wed, 08 Apr 2009 13:23:47 +0100

libx11 (2:1.2.1-1) unstable; urgency=low

  * New upstream release.
    + fixes fi_FI.UTF-8 locale (closes: #519474)
    + adds sr_RS locale (closes: #507940)
    + adds hu_HU.utf8 locale alias (closes: #407573)
    + Compose entries for some standard mathematical operators
      (closes: #411734)
  * Patch 012_ru_RU_UTF-8_XLC_LOCALE.diff removed, applied upstream.
  * Update patches 003_recognize_glibc_2.3.2_locale_names.diff,
    006_tailor_pt_BR.UTF-8_Compose.diff and 015_russian_locale_alias.diff.
  * 003_recognize_glibc_2.3.2_locale_names.diff: don't comment out the
    microsoft-cp* entries from compose.dir (closes: #511354).  Thanks, Sergei
    Golovan!
  * 003_recognize_glibc_2.3.2_locale_names.diff: don't comment out the eo_XX
    entries from compose.dir and locale.dir (closes: #479058).  Thanks, Luiz
    Portella!
  * 009_remove_th_Compose.diff: new patch, comment out the th_TH.UTF-8 entry
    from compose.dir, to allow Thai XIM as default for X apps
    (closes: #520509).  Thanks, Theppitak Karoonboonyanan!

 -- Julien Cristau <jcristau@debian.org>  Wed, 08 Apr 2009 12:31:21 +0100

libx11 (2:1.2-1) unstable; urgency=low

  * New upstream release.
  * Remove obsolete ld.so.conf handling from libx11-6 postinst.
  * Run autoreconf on build; add build-deps on automake, libtool, xutils-dev.
  * Handle parallel builds.
  * Refresh patches 003_recognize_glibc_2.3.2_locale_names.diff and
    012_ru_RU_UTF-8_XLC_LOCALE.diff.
  * Use a wildcard for usr/share/X11/locale instead of listing every single
    file.

 -- Julien Cristau <jcristau@debian.org>  Mon, 09 Mar 2009 16:36:09 +0100

libx11 (2:1.1.99.2-1) experimental; urgency=low

  * New upstream release.
  * Use new xcb socket handoff mechanism, update (build-)dependencies.
  * Refresh patches.
  * Build-dep on x11proto-core-dev >= 7.0.13.
