@@ -1,20 +1,0 @@
-#!/bin/sh
-set -e
-
-THIS_PACKAGE=libx11-6
-THIS_SCRIPT=preinst
-
-#INCLUDE_SHELL_LIB#
-
-case "$1" in
-  upgrade)
-    if dpkg --compare-versions "$2" le-nl "1:6.2.1+cvs.20050711-1"; then
-      if test -L /usr/lib/X11/locale && \
-         test "$(readlink /usr/lib/X11/locale)" = "../../share/X11/locale"; then
-	echo "Removing /usr/lib/X11/locale symlink."
-        rm /usr/lib/X11/locale
-        mkdir /usr/lib/X11/locale
-      fi
-    fi
-  ;;
-esac
