@@ -1,6 +1,8 @@
 libx11 (2:1.2.1-2) UNRELEASED; urgency=low
 
   * Move dbg packages to new debug section.
+  * Kill preinst which handled upgrades from early Ubuntu versions (before
+    breezy).  This is long obsolete.
 
  -- Julien Cristau <jcristau@debian.org>  Wed, 08 Apr 2009 13:23:47 +0100
 
